--- a/RtlSdrServer/9.0.0/aspnet-core/src/RtlSdrServer.Web.Mvc/appsettings.json
+++ b/RtlSdrServer/9.0.0/aspnet-core/src/RtlSdrServer.Web.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "Default": "Server=localhost,1433; Database=rtlsdr; User=sa; Password=Abcd1234!; TrustServerCertificate=True;"
+    //"Default": "Server=SQL6031.site4now.net,1433; Database=db_aa56ad_rtlsdrp; User=db_aa56ad_rtlsdrp_admin; Password=Abcd1234; TrustServerCertificate=True;"
   },
   "Authentication": {
     "JwtBearer": {
